:sparkles: feat: adicionando a configuração inicial do projeto

--- a/index.html
+++ b/index.html
@@ -1,13 +1,109 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+<html lang="pt-BR">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <link
+      rel="shortcut icon"
+      href="./src/assets/favicon.ico"
+      type="image/x-icon"
+    />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0"
+    />
+    <title>Alef Rodrigues | Nutricionista</title>
+    <meta
+      name="description"
+      content="Transforme seu corpo e sua autoestima. Alef Rodrigues é especialista em emagrecimento e ganho de massa muscular."
+    />
+    <meta
+      name="keywords"
+      content="Nutricionista, emagrecimento, massa muscular, autoestima, perda de peso, ganho muscular"
+    />
+    <meta
+      name="robots"
+      content="noindex, follow, nocache"
+    />
+    <meta
+      name="googlebot"
+      content="index, nofollow, noimageindex"
+    />
+    <link
+      rel="canonical"
+      href="http://localhost:5173/"
+    />
+    <link
+      rel="alternate"
+      hreflang="pt-BR"
+      href="http://localhost:5173/pt-BR"
+    />
+    <meta
+      property="og:title"
+      content="Alef Rodrigues | Nutricionista"
+    />
+    <meta
+      property="og:description"
+      content="Transforme seu corpo e sua autoestima. Alef Rodrigues é especialista em emagrecimento e ganho de massa muscular."
+    />
+    <meta
+      property="og:url"
+      content="http://localhost:5173/image_alefrodriguesnutri.jpg"
+    />
+    <meta
+      property="og:site_name"
+      content="Alef Rodrigues | Nutricionista"
+    />
+    <meta
+      property="og:locale"
+      content="pt_BR"
+    />
+    <meta
+      property="og:image"
+      content="http://localhost:5173/image_alefrodriguesnutri.jpg"
+    />
+    <meta
+      property="og:type"
+      content="website"
+    />
+    <meta
+      name="twitter:card"
+      content="summary_large_image"
+    />
+    <meta
+      name="twitter:title"
+      content="Alef Rodrigues | Nutricionista"
+    />
+    <meta
+      name="twitter:description"
+      content="Transforme seu corpo e sua autoestima. Alef Rodrigues é especialista em emagrecimento e ganho de massa muscular."
+    />
+    <meta
+      name="twitter:image"
+      content="http://localhost:5173/image_alefrodriguesnutri.jpg"
+    />
+    <link
+      rel="preconnect"
+      href="https://fonts.googleapis.com"
+    />
+    <link
+      rel="preconnect"
+      href="https://fonts.gstatic.com"
+      crossorigin
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Josefin+Sans:ital,wght@0,100..700;1,100..700&family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&family=PT+Mono&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="/src/css/custom.css"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
+    <script
+      type="module"
+      src="/src/main.jsx"
+    ></script>
   </body>
 </html>
